# skin3d

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: sync-from-upstream.yml
notebooks/: bodytex_annotations_data.ipynb  bodytex_annotations_visual.ipynb  bodytex_longitudinal_data.ipynb
skin3d/: annotate.py  bodytex.py  visualize.py
