[project]
name = "skin3d"
version = "0.1.0"
description = "Bounding boxes annotations for 3DBodyTex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.2.250827",
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]    # pycodestyle, pyflakes, isort